# mpi-tasks

./: .gitignore  CMakeLists.txt  class.cpp  helloWorld.cpp  main.cpp  main10.cpp  main19_04.cpp  main2.cpp  main22_03.cpp  main29_03.cpp  main4.cpp  main7.cpp  main8.cpp  main9.cpp  task1.cpp  task2.cpp  task3.cpp  task5.cpp  task6.cpp
