cmake_minimum_required(VERSION 3.6)
project(mpi-tasks)

set(CMAKE_CXX_STANDARD 11)

add_executable(class class.cpp)
add_executable(helloWorld helloWorld.cpp)
add_executable(main main.cpp)
add_executable(main2 main2.cpp)
add_executable(main4 main4.cpp)
add_executable(main7 main7.cpp)
add_executable(main8 main8.cpp)
add_executable(main9 main9.cpp)
add_executable(main10 main10.cpp)
add_executable(main19_04 main19_04.cpp)
add_executable(main22_03 main22_03.cpp)
add_executable(main29_03 main29_03.cpp)
add_executable(task1 task1.cpp)
add_executable(task2 task2.cpp)
add_executable(task3 task3.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)

SET(CMAKE_CXX_COMPILER /usr/local/Cellar/mpich/3.2_2/bin/mpicxx)
set(CMAKE_CXX_COMPILER /usr/local/Cellar/mpich/3.2_2/bin/mpic++)
set(CMAKE_C_COMPILER /usr/local/Cellar/mpich/3.2_2/bin/mpicc)
include_directories(MPI_INCLUDE_PATH)